5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1592_2425.log
== TEST (2019-03-29 18:44:33) 
-- CODE:
c=float(input("combustivel:"))
km=float(input("km:"))
media=(c/km)
print(round(media,3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(media,3)"km/l")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:44:50) 
-- CODE:
c=float(input("combustivel:"))
km=float(input("km:"))
media=(c/km)
print(round(media,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:45:10) 
-- CODE:
c=float(input("combustivel:"))
km=float(input("km:"))
media=(c/km)
print(round(media,3),"km/l")
-- EXECUTION TIME:
0.143383
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
